force-app/main/default/objects/MOA_Scan_Result__c/MOA_Scan_Result__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores the latest scan result for each user/profile/org level.</description>
    <label>MOA Scan Result</label>
</CustomObject>