force-app/main/default/objects/MOA_Scan_Result__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error message if the scan failed.</description>
    <label>Error Message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>