force-app/main/default/objects/MOA_Scan_Result__c/fields/Result_JSON__c.field-meta.xml
<CustomField>
    <fullName>Result_JSON__c</fullName>
    <description>JSON-serialized scan result data.</description>
    <label>Result JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>