force-app/main/default/objects/MOA_Scan_Result__c/fields/Scan_Date__c.field-meta.xml
<CustomField>
    <fullName>Scan_Date__c</fullName>
    <description>Timestamp when this scan was executed.</description>
    <label>Scan Date</label>
    <type>DateTime</type>
</CustomField>