force-app/main/default/objects/MOA_Scan_Result__c/fields/Scan_Status__c.field-meta.xml
<CustomField>
    <fullName>Scan_Status__c</fullName>
    <description>Current status of the scan (Running, Complete, Error).</description>
    <label>Scan Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>